# pylibnfc

./: CMakeLists.txt  README.md  pylibnfc.cpp  pyproject.toml  setup.py
